[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/BOLD_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://TimerVideo.webm" type="VideoStream" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Menu1/Control/VBoxContainer/Control:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 54 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu1/Control/VBoxContainer/Control2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 230 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Menu1/Control/VBoxContainer/LoadGame:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 116 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Menu1/Control/VBoxContainer/Scenarios:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 78 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Menu1/Control/VBoxContainer/Settings:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 154 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Menu1/Control/VBoxContainer/Exit:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 254 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Menu1/Control/VBoxContainer/Credits:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 192 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Menu1/Control/VBoxContainer/NameGame:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Menu1/Control/VBoxContainer/NameGame:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Menu1/Control/VBoxContainer/Scenarios:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Menu1/Control/VBoxContainer/LoadGame:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Menu1/Control/VBoxContainer/Settings:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Menu1/Control/VBoxContainer/Credits:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Menu1/Control/VBoxContainer/Exit:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("Menu1/Control/VBoxContainer/Control:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 54 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Menu1/Control/VBoxContainer/Control2:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 830 ), Vector2( 0, 830 ), Vector2( 0, 230 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Menu1/Control/VBoxContainer/LoadGame:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 716 ), Vector2( 0, 716 ), Vector2( 0, 116 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Menu1/Control/VBoxContainer/Scenarios:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 678 ), Vector2( 0, 678 ), Vector2( 0, 78 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Menu1/Control/VBoxContainer/Settings:rect_position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 754 ), Vector2( 0, 754 ), Vector2( 0, 154 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Menu1/Control/VBoxContainer/Exit:rect_position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 854 ), Vector2( 0, 854 ), Vector2( 0, 254 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Menu1/Control/VBoxContainer/Credits:rect_position")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( -0.1, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 792 ), Vector2( 0, 792 ), Vector2( 0, 192 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Menu1/Control/VBoxContainer/NameGame:rect_position")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Menu1/Control/VBoxContainer/NameGame:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Menu1/Control/VBoxContainer/Scenarios:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0.3, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Menu1/Control/VBoxContainer/LoadGame:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Menu1/Control/VBoxContainer/Settings:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0.9, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Menu1/Control/VBoxContainer/Credits:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Menu1/Control/VBoxContainer/Exit:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MainMenu" type="CanvasLayer"]

[node name="MenuRoot" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="MenuRoot"]

[node name="Menu1" type="MarginContainer" parent="MenuRoot"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VideoPlayer" type="VideoPlayer" parent="MenuRoot/Menu1"]
margin_right = 1280.0
margin_bottom = 720.0
stream = ExtResource( 3 )
autoplay = true

[node name="Control" type="Control" parent="MenuRoot/Menu1"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuRoot/Menu1/Control"]
margin_left = 980.0
margin_top = 200.0
margin_right = 1280.0
margin_bottom = 480.0

[node name="NameGame" type="Label" parent="MenuRoot/Menu1/Control/VBoxContainer"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Bunker Survival"
align = 1
valign = 1
uppercase = true

[node name="Control" type="Control" parent="MenuRoot/Menu1/Control/VBoxContainer"]
margin_top = 54.0
margin_right = 300.0
margin_bottom = 74.0
rect_min_size = Vector2( 20, 20 )

[node name="Scenarios" type="ToolButton" parent="MenuRoot/Menu1/Control/VBoxContainer"]
margin_top = 78.0
margin_right = 300.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 1 )
text = "Scenarios"

[node name="LoadGame" type="ToolButton" parent="MenuRoot/Menu1/Control/VBoxContainer"]
margin_top = 116.0
margin_right = 300.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 1 )
text = "Load game"

[node name="Settings" type="ToolButton" parent="MenuRoot/Menu1/Control/VBoxContainer"]
margin_top = 154.0
margin_right = 300.0
margin_bottom = 188.0
custom_fonts/font = ExtResource( 1 )
text = "Settings"

[node name="Credits" type="ToolButton" parent="MenuRoot/Menu1/Control/VBoxContainer"]
margin_top = 192.0
margin_right = 300.0
margin_bottom = 226.0
custom_fonts/font = ExtResource( 1 )
text = "Credits"

[node name="Control2" type="Control" parent="MenuRoot/Menu1/Control/VBoxContainer"]
margin_top = 230.0
margin_right = 300.0
margin_bottom = 250.0
rect_min_size = Vector2( 20, 20 )

[node name="Exit" type="ToolButton" parent="MenuRoot/Menu1/Control/VBoxContainer"]
margin_top = 254.0
margin_right = 300.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 1 )
text = "Exit"

[node name="Menu2" type="MarginContainer" parent="MenuRoot"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1280.0
margin_right = 1280.0

[node name="Control" type="Control" parent="MenuRoot/Menu2"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="ScenBackground" type="ColorRect" parent="MenuRoot/Menu2/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.235294, 0.486275, 0.239216, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MenuRoot/Menu2/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -140.0
margin_right = 150.0
margin_bottom = 140.0

[node name="Choose" type="Label" parent="MenuRoot/Menu2/Control/VBoxContainer"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
custom_fonts/font = ExtResource( 1 )
text = "Choose Scenario"
align = 1
valign = 1
uppercase = true

[node name="Control" type="Control" parent="MenuRoot/Menu2/Control/VBoxContainer"]
margin_top = 54.0
margin_right = 300.0
margin_bottom = 74.0
rect_min_size = Vector2( 20, 20 )

[node name="Nuclear" type="ToolButton" parent="MenuRoot/Menu2/Control/VBoxContainer"]
margin_top = 78.0
margin_right = 300.0
margin_bottom = 112.0
custom_fonts/font = ExtResource( 1 )
text = "Nuclear Warfare"

[node name="Asteroid" type="ToolButton" parent="MenuRoot/Menu2/Control/VBoxContainer"]
margin_top = 116.0
margin_right = 300.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 1 )
text = "Asteroid Impact"

[node name="Dinosaurs" type="ToolButton" parent="MenuRoot/Menu2/Control/VBoxContainer"]
margin_top = 154.0
margin_right = 300.0
margin_bottom = 188.0
custom_fonts/font = ExtResource( 1 )
text = "Back to Dinosaurs"

[node name="Flood" type="ToolButton" parent="MenuRoot/Menu2/Control/VBoxContainer"]
margin_top = 192.0
margin_right = 300.0
margin_bottom = 226.0
custom_fonts/font = ExtResource( 1 )
text = "Great Flood"

[node name="Control2" type="Control" parent="MenuRoot/Menu2/Control/VBoxContainer"]
margin_top = 230.0
margin_right = 300.0
margin_bottom = 250.0
rect_min_size = Vector2( 20, 20 )

[node name="Back" type="ToolButton" parent="MenuRoot/Menu2/Control/VBoxContainer"]
margin_top = 254.0
margin_right = 300.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 1 )
text = "Back to Main Menu"

[node name="NALabel1" type="Label" parent="MenuRoot/Menu2/Control"]
margin_left = 652.0
margin_top = 315.0
margin_right = 796.0
margin_bottom = 341.0
rect_rotation = -40.0
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( 91.5957, 44.0625 )
custom_colors/font_color = Color( 1, 0.054902, 0.054902, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Not Available"

[node name="NALabel2" type="Label" parent="MenuRoot/Menu2/Control"]
margin_left = 656.0
margin_top = 348.0
margin_right = 800.0
margin_bottom = 374.0
rect_rotation = -40.0
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( 91.5957, 44.0625 )
custom_colors/font_color = Color( 1, 0.054902, 0.054902, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Not Available"

[node name="NALabel3" type="Label" parent="MenuRoot/Menu2/Control"]
margin_left = 629.0
margin_top = 394.0
margin_right = 773.0
margin_bottom = 420.0
rect_rotation = -40.0
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( 91.5957, 44.0625 )
custom_colors/font_color = Color( 1, 0.054902, 0.054902, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Not Available"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuRoot"]
anims/RESET = SubResource( 1 )
anims/fade_in = SubResource( 2 )

[connection signal="pressed" from="MenuRoot/Menu1/Control/VBoxContainer/Scenarios" to="MenuRoot" method="_on_Scenarios_pressed"]
[connection signal="pressed" from="MenuRoot/Menu1/Control/VBoxContainer/Exit" to="MenuRoot" method="_on_Exit_pressed"]
[connection signal="pressed" from="MenuRoot/Menu2/Control/VBoxContainer/Nuclear" to="MenuRoot" method="_on_AtomicWarButton_pressed"]
[connection signal="pressed" from="MenuRoot/Menu2/Control/VBoxContainer/Back" to="MenuRoot" method="_on_Back_pressed"]
